# celadon-theme

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  STATS.md  codecov.yml  config.json  palette.yml  pyproject.toml  qodana.yml
.github/: FUNDING.yml
.github/workflows/: branch-ci.yml  branch-test.yml  quality-check-ci.yml  quality-test.yml  release.yml  verify.yml
jetbrains/: build.gradle.kts  settings.gradle.kts
jetbrains/src/main/resources/themes/: Celadon.xml  celadon.theme.json
src/celadon_theme/: main.py
src/celadon_theme/config/: logging_config.py  paths.py
src/celadon_theme/generator/: base.py  jetbrains.py  vscode.py
src/celadon_theme/models/: config.py  palette.py
src/celadon_theme/reporting/: sample_projects.py
src/celadon_theme/template/: parser.py
templates/: celadon.icls.j2  celadon.theme.json.j2  gradle.properties.j2  jetbrains-plugin.xml.j2  jetbrains-theme.json.j2  jetbrains.icls.j2  palette.yaml  plugin.xml.j2  vscode-package.json.j2  vscode-theme.json.j2
tests/: celadon_theme_base_test.py  conftest.py  metadata_test.py
tests/config/: paths_test.py
tests/generator/: base_test.py  jetbrains_test.py  vscode_test.py
tests/models/: palette_test.py
tests/reporting/: sample_projects_test.py
tests/template/: parser_test.py
