[project]
name = "celadon-theme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alif Naufal", email = "alif898@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
celadon-theme = "celadon_theme.main:main"
