[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project details

[project]
name = "celadon-theme"
dynamic = ["version"]
description = "A ceramic-inspired IDE dark theme generator using Python and Jinja2"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [
    { name = "Alif Naufal", email = "alif898@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pathspec>=1.0.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.10",
    "svglib>=1.6.0",
    # Force patched version to address GHSA-vfmq-68hx-4jfw (XXE in default parsers)
    # See: https://github.com/lxml/lxml/security/advisories/GHSA-vfmq-68hx-4jfw
    "lxml>=6.1.0",
    "markdown-it-py>=3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "types-PyYAML>=6.0.12",
]

[project.urls]
Homepage = "https://github.com/alif898/celadon-theme"
Issues = "https://github.com/alif898/celadon-theme/issues"

[project.scripts]
celadon-theme = "celadon_theme.main:main"

# Tooling

[tool.hatch.version]
path = "config.json"
pattern = "\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.coverage.run]
source = ["src/celadon_theme"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "src/celadon_theme/main.py",
    "src/celadon_theme/config/logging_config.py",
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=src/celadon_theme --cov-report=term-missing"
testpaths = ["tests"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ruff]
src = ["src", "tests"]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
